<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/address_tv"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPersonName"
            android:text="@string/address_et"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:visibility="gone" />

    <Button
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/temperature"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/environment_temperature_tv"/>

            <TextView
                android:id="@+id/env_temp_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read" />

    <EditText
        android:id="@+id/alarm_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/alarm_temperature"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <Button
        android:id="@+id/set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set" />

    <EditText
        android:id="@+id/cmd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/cmd"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write"
        android:visibility="gone" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/result"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/calibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calibration"
        android:visibility="gone" />


</LinearLayout>
